--- a/app/src/main/res/layout/activity_score_display.xml
+++ b/app/src/main/res/layout/activity_score_display.xml
@@ -33,4 +33,15 @@
         android:layout_alignStart="@+id/textView3"
         android:layout_marginTop="124dp"
         android:text="TextView" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="230dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/textView3"
+        android:layout_marginTop="172dp"
+        android:text="TextView" />
+
+
 </RelativeLayout>
