--- a/app/src/main/res/layout/activity_event_display.xml
+++ b/app/src/main/res/layout/activity_event_display.xml
@@ -13,7 +13,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
-        android:text="TextView" />
+        android:text="TextView"
+        android:fontFamily="sans-serif"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView2"
