--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:fontFamily="sans-serif-condensed"/>
 
         <EditText
             android:id="@+id/editText"
@@ -33,7 +34,8 @@
             android:layout_alignParentTop="true"
             android:ems="10"
             android:inputType="textPersonName"
-            android:hint="Enter event name" />
+            android:hint="Enter event name"
+            android:fontFamily="sans-serif"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
@@ -51,7 +53,8 @@
             android:layout_alignParentTop="true"
             android:layout_marginEnd="32dp"
             android:text="Search"
-            android:onClick="search"/>
+            android:onClick="search"
+            android:fontFamily="sans-serif"/>
 
 
     </RelativeLayout>
