--- a/app/src/main/res/layout/activity_score_display.xml
+++ b/app/src/main/res/layout/activity_score_display.xml
@@ -14,7 +14,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="15dp"
         android:layout_marginTop="24dp"
-        android:text="TextView" />
+        android:text="TextView"
+        android:fontFamily="sans-serif"/>
 
     <TextView
         android:id="@+id/textView4"
@@ -23,7 +24,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/textView3"
         android:layout_marginTop="72dp"
-        android:text="TextView" />
+        android:text="TextView"
+        android:fontFamily="sans-serif"/>
 
     <TextView
         android:id="@+id/textView5"
@@ -32,7 +34,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/textView3"
         android:layout_marginTop="124dp"
-        android:text="TextView" />
+        android:text="TextView"
+        android:fontFamily="sans-serif"/>
 
     <TextView
         android:id="@+id/textView6"
@@ -41,7 +44,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/textView3"
         android:layout_marginTop="172dp"
-        android:text="TextView" />
+        android:text="TextView"
+        android:fontFamily="sans-serif"/>
 
 
 </RelativeLayout>
