--- a/app/src/main/res/layout/recyclerviewrow.xml
+++ b/app/src/main/res/layout/recyclerviewrow.xml
@@ -9,5 +9,6 @@
     android:id="@+id/textRow"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textSize="20sp"/>
+    android:textSize="20sp"
+    android:fontFamily="sans-serif"/>
 </LinearLayout>
